--- a/webuilder/css/style.css
+++ b/webuilder/css/style.css
@@ -3208,7 +3208,7 @@ iframe {
 }
 
 .banner_inner_text ul li:hover a, .banner_inner_text ul li.active a {
-  color: #ffcd00;
+  color: #d6251c;
 }
 
 /* Clients area css
