work in progress

--- a/webuilder/css/style.css
+++ b/webuilder/css/style.css
@@ -137,8 +137,8 @@ iframe {
   content: "";
   width: 170px;
   height: 100px;
-  border: 6px solid #f2f2f2;
-  position: absolute;
+  /*border: 6px solid #f2f2f2;*/
+  position: absolute; 
   left: 47px;
   bottom: 10px;
   z-index: -1;
@@ -462,7 +462,7 @@ iframe {
 
 .main_menu_area .navbar.navbar-default .nav.navbar-nav.navbar-right li a {
   padding: 0px;
-  font-size: 14px;
+  font-size: 12 px;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   text-transform: uppercase;
@@ -2340,7 +2340,7 @@ iframe {
 }
 
 .latest_news_item .news_content h4:hover {
-  color: #ffcd00;
+  color: #2379ba;
 }
 
 .latest_news_item .news_content h6 {
