--- a/webuilder/css/style.css
+++ b/webuilder/css/style.css
@@ -1077,9 +1077,9 @@ iframe {
 .submit_btn {
   -webkit-box-shadow: none;
   box-shadow: none;
-  background: #ffcd00;
+  background: #2379ba;
   border-radius: 0px;
-  border: 1px solid #ffcd00;
+  border: 1px solid #2379ba;
   color: #fff;
   text-transform: uppercase;
   font-family: "Open Sans", sans-serif;
@@ -1095,7 +1095,7 @@ iframe {
 
 .submit_btn:hover {
   background: #fff;
-  color: #31353d;
+  color: #2379ba;
 }
 
 /* End get bg Button area css
